ci: adiciona gh-pages como trigger do workflow

--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -3,8 +3,9 @@ name: pages build and deployment
 on:
   push:
     branches:
-      - main
-      - main-forcada
+  - main
+  - main-forcada
+  - gh-pages
 
 jobs:
   build:
